# my-all-weather-trader

./: .gitignore  AGENT.md  AGENT_RULES.md  README.md  generate_live_plan.py  main.py  pyproject.toml  run_test.py
reports/: weekly_trade_plan.md
src/backtest/: engine.py  optimizer.py
src/config/: settings.py
src/data_io/: account_manager.py  api_fetcher.py  check_dates.py  csv_loader.py
src/features/: indicators.py
src/strategies/: base_strategy.py  value_averaging.py
src/visualization/: plot_utils.py
tests/: test_engine.py  test_strategies.py
tools/: update_va_params.py
